--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "angular": "~1.3.0",
-    "socket.io": "~1.1.0"
+    "socket.io": "~1.1.0",
+    "log": "*"
   }
 }
